--- a/src/components/MainComp/MainComp.module.css
+++ b/src/components/MainComp/MainComp.module.css
@@ -6,10 +6,10 @@ main{
 }
 
 .form {
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    row-gap: 1rem;
+    row-gap: 3rem;
     column-gap: 0.5rem;
 }
 
@@ -20,9 +20,9 @@ main{
 }
 
 .form > label > input{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     border-radius: 8px;
-    padding: 0.2rem;
+    padding: 0.3rem 0.6rem;
     border: 1px solid rgb(189, 187, 187);
 }
 
@@ -46,21 +46,42 @@ main{
 }
 
 .meme{
-    margin-top: 2rem;
-    background-color: rgb(219, 206, 206);
-    height: 400px;
-    width: 600px;
-    border-radius: 20px;
+    position: relative;
 }
 
 .meme > img{
-    margin-top: 1rem;
-    background-color: red;
-    max-width: 100%;
-    height: auto;
-    border-radius: 3px;
+    margin-top: 0.5rem;
+    /* margin: 2rem 10px 10px 10px; */
+    background-color: rgb(219, 206, 206);
     height: 100%;
-    width: 570px;
+    width: 100%;
+    border-radius: 20px;
+}
+
+.meme span{
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    font-size: 3rem;
+    text-shadow: 3px 4px 1px #000000;
+}
+
+.meme .top{
+    width: 100%;
+    text-align: center;
+    /* white-space: nowrap; */
+    top: 0.9rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.meme .bottom{
+    width: 100%;
+    text-align: center;
+    bottom: 0.9rem;
+    left: 50%;
+    transform: translateX(-50%);
+    /* white-space: nowrap; */
 }
 
 .rowSpan2{
