--- a/src/components/MainComp/MainComp.module.css
+++ b/src/components/MainComp/MainComp.module.css
@@ -9,7 +9,7 @@ main{
     margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    row-gap: 3rem;
+    row-gap: 2rem;
     column-gap: 0.5rem;
 }
 
@@ -53,8 +53,8 @@ main{
     margin-top: 0.5rem;
     /* margin: 2rem 10px 10px 10px; */
     background-color: rgb(219, 206, 206);
-    height: 100%;
-    width: 100%;
+    /* height: 100%; */
+    width: 600px;
     border-radius: 20px;
 }
 
